--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+linux-imx (6.1.76-elxr2-1) bookworm; urgency=medium
+
+  [ Li Zhou ]
+  * salsa-ci.yml: implement a shortcut to the package repository
+
+ -- Kevin Hao <kexin.hao@windriver.com>  Wed, 19 Jun 2024 10:18:41 +0000
+
 linux-imx (6.1.76-elxr1-1) bookworm; urgency=medium
 
   [ Li Zhou ]
